--- a/public/styles.css
+++ b/public/styles.css
@@ -237,6 +237,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    flex-shrink: 0;
 }
 
 .about-portrait {
@@ -244,10 +245,12 @@ h3 {
     width: 100%;
     border-radius: 0;
     object-fit: cover;
+    align-self: flex-start;
 }
 
 .about-text {
     flex: 1 1 300px;
+    align-self: flex-start;
 }
 
 .about-text p {
@@ -332,11 +335,12 @@ h3 {
 
 .certificate-item {
     width: calc(33% - 1rem);
-    min-width: 180px;
+    min-width: 280px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    text-align: center;
+    gap: 1.2rem;
+    text-align: left;
 }
 
 .certificate-image {
@@ -344,14 +348,14 @@ h3 {
     height: 160px;
     object-fit: cover;
     border-radius: 50%;
-    display: block;
-    margin: 0 auto;
+    flex-shrink: 0;
 }
 
 .certificate-title {
     font-size: 1rem;
-    margin: 0 0 0.5rem 0;
-    order: -1;
+    margin: 0;
+    flex: 1;
+    line-height: 1.4;
 }
 
 /* Responsive hero sizing */
@@ -400,7 +404,8 @@ html {
 
 @media (max-width: 700px) {
     .certificate-item {
-        width: calc(50% - 1rem);
+        width: 100%;
+        min-width: auto;
     }
 }
 
